2005-07-01  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes_applet.c: use GtkIconTheme instead of GnomeIconTheme.
	  Patch by Michael Terry <mike@mterry.name>. Closes #170198.

2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>

	* stickynotes.c:
	* stickynotes_applet.c:
	* stickynotes_applet.h:
	* stickynotes_applet_callbacks.c:
	* util.c:
	* util.h: Cleanups

2005-03-07  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/figures/*.png: many new images

	* docs/C/stickynotes_applet.xml: Update documentation for GNOME 2.10.

2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* stickynotes_applet_callbacks.c: Don't leak style while handling
	the change_background signal.  Fix adapted from Vincent Untz's fixes
	to various panel applets.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* stickynotes.c: (stickynotes_save): Don't mix code and decl.

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes_callbacks.c: Don't free something we're not meant to.
	  Why hadn't this crashed?

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes_applet.c: Use DATADIR in
	panel_applet_setup_menu_from_file(). Useful if you're running out of
	prefix. Other applets should have this fix.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes.c: Fix stickynotes in RTL environments.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* utils.c: Fix tiny error calling wrong function. Why hasn't this
	  broken?

2005-01-09  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes_applet_callbacks.c: Use GtkAboutDialog.

2005-01-09  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes.[ch]: Waste less memory due to Glade. Patch from
	  Paolo Borelli <pborelli@katamail.com>.

	* stickynotes.schemas.in: Oops, lint the XML before you commit.

2005-01-09  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes.[ch]:
	* stickynotes_callbacks.c:
	* stickynotes_applet.[ch]:
	* stickynotes_applet_callbacks.c:
	* stickynotes.glade: