@@ -74,18 +74,6 @@
 </schema>
 
 <schema>
-	<key>/schemas/apps/stickynotes_applet/settings/visible</key>
-	<applyto>/apps/stickynotes_applet/settings/visible</applyto>
-	<owner>stickynotes_applet</owner>
-	<type>bool</type>
-	<default>true</default>
-	<locale name="C">
-		<short>Sticky notes' visibility</short>
-		<long>Specifies whether the sticky notes are visible or not.</long>
-	</locale>
-</schema>
-
-<schema>
 	<key>/schemas/apps/stickynotes_applet/settings/locked</key>
 	<applyto>/apps/stickynotes_applet/settings/locked</applyto>
 	<owner>stickynotes_applet</owner>
