@@ -1,3 +1,14 @@
+2005-07-13  Davyd Madeley  <davyd@madeley.id.au>
+
+	* GNOME_StickyNotesApplet.xml:
+	* stickynotes.c:
+	* stickynotes.schemas.in:
+	* stickynotes_applet.c:
+	* stickynotes_applet.h:
+	* stickynotes_applet_callbacks.c:
+	* stickynotes_applet_callbacks.h: stickynotes features from
+	  Jaap A. Haitsma <jaap@haitsma.org>. Closes #308701.
+
 2005-07-01  Davyd Madeley  <davyd@madeley.id.au>
 
 	* stickynotes_applet.c: use GtkIconTheme instead of GnomeIconTheme.
